@@ -3,7 +3,7 @@
  * Handle cases when we are configured for no sound BUT with a midi driver
  *
  * Copyright (C) 1999-2005 Id Software, Inc.
- * Copyright (C) 2010 O.Sezer <sezero@users.sourceforge.net>
+ * Copyright (C) 2010-2011 O.Sezer <sezero@users.sourceforge.net>
  *
  * $Id$
  *
